tests/snapshots/structure__package_bin__fail__package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--package
workspace-package
--bin
foobar

STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_bin_target


STDOUT:
