tests/snapshots/structure__package_bin__fail__virtual_workspace_single_package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--package
workspace-package
--bin
foobar

STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_multi_target


STDOUT:
