tests/snapshots/structure__package_bin__fail__workspace_multi_package.snap
---
source: tests/structure.rs
expression: output
---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- workspace_multi_package
- package_bin_target
- package_lib_target
- package_multi_target


STDOUT:
