tests/snapshots/structure__package_bin__fail__workspace_single_package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
STDERR:
Error: No package found with name "workspace-package".

Packages present in workspace:
- package_multi_target


STDOUT:
